# learnopengl

./: .gitignore
getting_started/01-hello-window/: README.md
getting_started/01-hello-window/tutorial/src/: main.cpp
getting_started/02-hello-triangle/exercise-1/src/: main.cpp
getting_started/02-hello-triangle/exercise-2/src/: main.cpp
getting_started/02-hello-triangle/exercise-3/: CMakeLists.txt
getting_started/02-hello-triangle/exercise-3/src/: main.cpp
getting_started/02-hello-triangle/tutorial-ebo/src/: main.cpp
getting_started/02-hello-triangle/tutorial/src/: main.cpp
